--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "acorn": "^5.0.3",
+    "acorn-dynamic-import": "^3.0.0",
     "alter": "^0.2.0",
     "convert-source-map": "^1.1.2",
     "optimist": "^0.6.1",
