--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "source-map": "^0.5.3",
     "stable": "^0.1.5",
     "stringmap": "^0.2.2",
-    "stringset": "^0.2.1",
-    "tryor": "^0.1.2"
+    "stringset": "^0.2.1"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
