--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "convert-source-map": "^1.1.2",
     "optimist": "^0.6.1",
     "source-map": "^0.5.3",
-    "stringmap": "^0.2.2",
-    "stringset": "^0.2.1"
+    "stringmap": "^0.2.2"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
