--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "acorn-dynamic-import": "^3.0.0",
     "convert-source-map": "^1.1.2",
     "optimist": "^0.6.1",
-    "source-map": "^0.5.3",
-    "stringmap": "^0.2.2"
+    "source-map": "^0.5.3"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
