--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
-    "diff": "^2.2.1",
-    "find-line-column": "^0.5.2"
+    "diff": "^2.2.1"
   },
   "keywords": [
     "angular",
