--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "url": "https://github.com/bluetech/ng-annotate-patched.git"
   },
   "dependencies": {
-    "acorn": "^5.0.3",
-    "acorn-dynamic-import": "^3.0.0",
+    "acorn": "^6.0.5",
+    "acorn-dynamic-import": "^4.0.0",
+    "acorn-walk": "^6.1.1",
     "convert-source-map": "^1.1.2",
     "optimist": "^0.6.1",
     "source-map": "^0.5.3"
