--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "acorn": "^7.0.0",
     "acorn-walk": "^7.0.0",
     "convert-source-map": "^1.1.2",
-    "optimist": "^0.6.1",
+    "commander": "^3.0.1",
     "source-map": "^0.6.1"
   },
   "devDependencies": {
